Fixed spacings and time color

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ footer button ion-icon {
 	background-color: #FFDEDE;
 }
 
-.message .time {
+.time {
 	color: #AAAAAA;
 	margin-right: 5px;
 }
@@ -151,9 +151,6 @@ menu {
 	right: 0;
 	top:  0;
 }
-
-
-
 
 .menu-background {
 	width: calc(100vw - 259px);
